AC-770: Fixed alignment

--- a/src/pages/billing/components/RecipientValidationModal.module.scss
+++ b/src/pages/billing/components/RecipientValidationModal.module.scss
@@ -22,7 +22,7 @@
   color: color(orange);
   font-weight: 700;
   margin: 0 20px;
-  padding: 15px;
+  padding: 15px 0;
   border-top: 1px solid color(gray, 9);
 }
 
